# morality_engine

./: .gitignore  1_15_errors.txt  AGENTS.md  Cargo.toml  error.txt  log.txt  narrator_text.txt  ui_masterplan.md  ui_refactor_plan  ui_refactor_questions  ui_secondary_refactor_plan.md
.config/: nextest.toml
assets/shaders/: pulsing_material.wgsl  scan_lines.wgsl
dilemmas/: lab_1.json  lab_2.json  lab_2_1_empty_choice.json  lab_2_2_plenty_of_time.json  lab_2_3_no_time_at_all.json  lab_2_4_five_for_nothing.json  lab_2_5_cancer_cure.json  lab_2_6_child.json  lab_2_7_you.json  lab_3.json  lab_3_1.json  lab_3_2.json  lab_3_3.json  lab_4.json  lab_5.json  lab_6.json  lab_7.json
docs/: backlog.md  book.toml  campaign_graph_view.html  dilemma_visual_profiles.md  idea_inbox.md  level_select_text_input_refactor_plan.md  level_select_usage.md  scene_architecture_contract.md  scene_compliance_matrix.md  scene_flow_graph_authoring.md  scene_flow_reference.md  scene_manual_validation_checklist.md  scene_progression_graph_spec.md  scene_refactor_plan.md  scrollable_rtt_plan.md  scrollable_stage1_report.md  ui_architecture_contract.md  ui_compliance_matrix.md  ui_ecs_reference.md  ui_manual_validation_checklist.md  ui_scrollable_usage.md  ui_unified_focus_gating_refactor_plan.md  ui_window_primitive_refactor_checklist.md
scripts/: ui_gpu_smoke.sh  ui_query_safety.sh  ui_regression.sh
src/: audio.rs  background.rs  character.rs  colors.rs  common_ui.rs  dialogue.rs  dilemma.rs  dillema.rs  endings.rs  game_states.rs  interaction.rs  io.rs  io_elements.rs  lever.rs  loading.rs  main.rs  menu.rs  motion.rs  narration.rs  person.rs  random.rs  shaders.rs  shortcuts.rs  sprites.rs  stats.rs  text.rs  time.rs  train.rs
src/ascii_fonts/: merlin.rs  mod.rs
src/audio/: mod.rs
src/background/: mod.rs
src/colors/: mod.rs
src/data/: mod.rs  rng.rs
src/dialogue/: character.rs  dialogue.rs  mod.rs
src/dilemma/: dilemma.rs  junction.rs  lever.rs  mod.rs
src/entities/: mod.rs
src/game_states/: mod.rs
src/graph/: mod.rs
src/inheritance/: mod.rs
src/interaction/: mod.rs
src/loading/: loading_bar.rs  mod.rs
src/menu/: main_menu.txt  mod.rs
src/motion/: mod.rs
src/person/: mod.rs
src/physics/: mod.rs
src/scenes/: composition.rs  mod.rs
src/shaders/: mod.rs
src/sprites/: compound.rs  compounds.rs  mod.rs  window.rs
src/startup/: cursor.rs  debug.rs  mod.rs  pause.rs  render.rs  rng.rs  shortcuts.rs  system_menu.rs  textures.rs
src/stats/: mod.rs
src/style/: mod.rs
src/systems/: mod.rs  resize.rs
src/text/: mod.rs
src/timing/: mod.rs
src/track/: mod.rs
src/train/: mod.rs
text/: lab_1.json  lab_2.json  lab_2_fail.json  lab_2_indecisive.json  lab_2_pass.json  lab_2_slow.json  lab_2_very_indecisive.json  lab_3_broken.json  lab_3_broken_2.json  lab_3_broken_3.json  lab_3_broken_4.json  lab_3_broken_5.json  lab_3_broken_6.json  lab_3_broken_7.json  lab_3_fail.json  lab_3_fail_inaction.json  lab_3_fixed.json  lab_3_pass.json  lab_3_slow.json  lab_3_slow_again.json  lab_4.json  lab_4_fail.json  lab_4_indifferent.json  lab_4_indifferent_1.json  lab_4_indifferent_2.json  lab_4_indifferent_3.json  lab_4_indifferent_fail.json  lab_4_pass.json  lab_5.json
text/backgrounds/: desert.json
(+284 files in other folders)
