[package]
name    = "morality_engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_tools = []

# ──────────────────────────────
# Hard requirements (top-level)
# ──────────────────────────────
[dependencies]
# async / io
rodio      = "0.21.1"

# game / engine
bevy       = "0.18"             

# maths / randomness
rand         = "0.9.2"
rand_distr   = "0.5.1"
rand_pcg     = "0.9.0"
rand_xorshift = "0.4.0"
noise        = "0.9.0" 

# data / misc
serde        = { version = "1.0.228", features = ["derive"] }
serde_json   = "1.0.145"
phf          = { version = "0.13.1", features = ["macros"] }
enum-map     = "2.7.3"
once_cell    = "1.21.3"
smallvec     = "1.15.1"
log          = { version = "0.4.28", features = ["max_level_debug", "release_max_level_warn"] }
rand_core = "0.9.3"

# ──────────────────────────────
# Profile tweaks
# ──────────────────────────────
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto             = true
opt-level       = 3
codegen-units   = 1
incremental     = false
debug           = false
